--- a/Domaci3Film/Domaci3Film/Domaci3Film.vcxproj.filters
+++ b/Domaci3Film/Domaci3Film/Domaci3Film.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="DomaciFilm.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="VanOpsega.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
